--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -15,4 +15,5 @@ $color-primary-50: #3A85FF; //NEW COLOR
 $color-primary-60: #0062FF;
 
 $color-darkweb-text-primary: #E2E5E9;
+$color-darkweb-basic-primary: #4789EB;
 $color-darkweb-bg: #252A32;
