--- a/scss/_drupal-override-app-page.scss
+++ b/scss/_drupal-override-app-page.scss
@@ -1,4 +1,4 @@
-/* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR APP PAGE ----------------------- */
+/* ----------------------- замена DRUPAL DEFAULTS для APP PAGE ----------------------- */
 
 .page-node-type-application .apicMainContent {
   overflow: visible;
