--- a/scss/_drupal-override-apps.scss
+++ b/scss/_drupal-override-apps.scss
@@ -1,4 +1,4 @@
-/* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR APPS PAGE----------------------- */
+/* ----------------------- замена DRUPAL DEFAULTS FOR APPS PAGE----------------------- */
 
 // Верхняя часть
 a.button.apicNewApp {
