--- a/scss/_drupal-override-blog.scss
+++ b/scss/_drupal-override-blog.scss
@@ -1,4 +1,4 @@
-/* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR BLOG ----------------------- */
+/* ----------------------- замена DRUPAL DEFAULTS FOR BLOG ----------------------- */
 .local-actions {
   margin: 10px auto;
   max-width: 1220px;
