--- a/scss/_drupal-override-cookie.scss
+++ b/scss/_drupal-override-cookie.scss
@@ -1,4 +1,4 @@
-/* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR COOKIE BANNER ----------------------- */
+/* ----------------------- замена DRUPAL DEFAULTS FOR COOKIE BANNER ----------------------- */
 .sliding-popup-bottom {
   width: 100%;
 }
