--- a/scss/_drupal-override-get-started.scss
+++ b/scss/_drupal-override-get-started.scss
@@ -1,4 +1,4 @@
-/* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR GET STARTED PAGE ----------------------- */
+/* ----------------------- замена DRUPAL DEFAULTS FOR GET STARTED PAGE ----------------------- */
 .ibmapimGetStarted {
   margin-bottom: 3rem;
 }
