--- a/scss/_drupal-override-profile.scss
+++ b/scss/_drupal-override-profile.scss
@@ -1,4 +1,4 @@
-/* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR USER PROFILE PAGE ----------------------- */
+/* ----------------------- замена DRUPAL DEFAULTS FOR USER PROFILE PAGE ----------------------- */
 // Блок "редактировать"
 .panel {
   background-color: inherit;
