--- a/scss/_drupal-override-search.scss
+++ b/scss/_drupal-override-search.scss
@@ -1,4 +1,4 @@
-/* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR SEARCH PAGE----------------------- */
+/* ----------------------- замена DRUPAL DEFAULTS FOR SEARCH PAGE----------------------- */
 
 .view.view-search-content {
   max-width: 1220px;
