--- a/scss/_drupal-override-support.scss
+++ b/scss/_drupal-override-support.scss
@@ -1,4 +1,4 @@
-/* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR SUPPORT PAGE ----------------------- */
+/* ----------------------- замена DRUPAL DEFAULTS FOR SUPPORT PAGE ----------------------- */
 
 // Отключение показа форума
 .forumDiv {
