--- a/scss/_drupal-override.scss
+++ b/scss/_drupal-override.scss
@@ -1,6 +1,7 @@
 @import 'drupal-override-general';
 @import 'drupal-override-cookie';
 @import 'drupal-override-header';
+@import 'drupal-override-auth';
 @import 'drupal-override-product';
 @import 'drupal-override-api-page';
 @import 'drupal-override-profile';
